@@ -2,6 +2,7 @@
 
   * (copy) update spacing
     https://github.com/lemmon/abrusco/commit/25d76c37ac29aceffd057b62c2bc431aa5a136b1
+  * (margin) add more margins
 
 # 0.23.0 (2023-01-17)
 
